# vuemantics

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  compose.yml  justfile  prod.compose.yml  setup.sh
.context/: CLAUDE.md
.github/workflows/: backend-lint.yml  backend-security.yml
backend/: .dockerignore  .style.yapf  CHANGELOG.md  __init__.py  config.py  database.py  main.py  psyop.py  pyproject.toml  settings.py
backend/auth/: __init__.py  dependencies.py  jwt_auth.py  password.py
backend/core/: __init__.py  correlation.py  error_schemas.py  exceptions.py  lifespan.py  rate_limit.py  redis.py  responses.py
backend/core/docs/: __init__.py  tags.py
backend/core/tasks/: __init__.py  broker.py
backend/core/validators/: __init__.py  description.py  file.py  password.py
backend/core/websocket/: __init__.py  manager.py  messages.py  publisher.py
backend/migrations/: __init__.py  add_batch_support.py  add_hidden_column.py  add_local_embedding_column.py  add_regeneration_tracking.py  add_token_version.py  add_video_codec_column.py  rename_gemini_summary_to_description.py
backend/models/: Base.py  Upload.py  UploadBatch.py  User.py  __init__.py
backend/routers/: __init__.py  auth.py  client_config.py  health.py  search.py  upload.py  websocket.py
backend/routers/v1/: __init__.py  bulk_upload.py  changelog.py  client_config.py  health.py  search.py  upload.py  websocket.py
backend/schemas/: __init__.py  auth.py  base.py  changelog.py  client_config.py  common.py  health.py  search.py  upload.py  user.py
backend/services/: __init__.py  ai_service.py  bulk_upload_service.py  local_ai.py  search_service.py  storage_service.py
backend/services/ai/: __init__.py  _preprocess_vision.py  embedding.py  manager.py  prompts.py  regenerate.py  service.py  vision.py
backend/tests/: conftest.py  upload_test_images.py
backend/tests/unit/: test_models_base.py  test_models_upload.py  test_models_user.py
backend/workers/: __init__.py  batch_processor.py
backend/workers/batch_helpers/: __init__.py  _process_upload_with_retry.py  _publish_batch_progress.py  _publish_file_progress.py
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  config.ts  main.tsx
frontend/src/api/hooks/: index.ts  useAuth.ts  useBulkUpload.ts  useClientConfig.ts  useSearch.ts  useUpload.ts
frontend/src/api/types/: auth.types.ts  bulk-upload.types.ts  client-config.types.ts  index.ts  search.types.ts  upload.types.ts  user.types.ts
frontend/src/core/api/: api.config.ts  errors.ts  query.config.ts
frontend/src/core/app/: protected-route.tsx  routers.tsx  shell.module.scss  shell.tsx  toast.module.scss
frontend/src/core/components/: GlobalBatchIndicator.tsx  global-batch-indicator.module.scss  index.ts
frontend/src/core/lib/: auth.store.ts
frontend/src/core/lib/stores/: bulk-upload.ui.store.ts  gallery.ui.store.ts  global-batch-progress.store.ts  index.ts  upload.ui.store.ts
frontend/src/core/socket/: index.ts  socket.client.ts  socket.types.ts  useBatchProgress.ts  useFileProgress.ts  useSocket.ts  useUploadProgress.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/gallery/: gallery.module.scss  index.tsx  useGalleryHandlers.ts
frontend/src/routes/landing/: index.tsx  landing.module.scss
frontend/src/routes/login/: index.tsx  login.module.scss
frontend/src/routes/register/: index.tsx  register.module.scss
frontend/src/routes/upload/: BatchProgressIndicator.tsx  BulkUploadQueue.tsx  batch-progress-indicator.module.scss  bulk-upload-queue.module.scss  index-old-backup.tsx  index.tsx  upload.module.scss
frontend/src/styles/: _reset.scss  _tokens.scss
infra/dev/: compose.yml
infra/dev/docker/: Dockerfile.backend  Dockerfile.frontend  fastapi.dev
infra/dev/nginx/: dev.conf  dev.nginx  nginx.dev.conf
infra/prod/: compose.yml
infra/prod/docker/: Dockerfile.backend  Dockerfile.frontend  fastapi.prod  frontend-builder.prod
infra/prod/nginx/: nginx.prod.conf  prod.nginx
meta/: LICENSE
