[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-venv"
version = "0.1.1"
description = "A smart camera roll application with vector powered semantic search"
authors = [{name = "Carter Perez"}]
requires-python = ">=3.13"
license = "MIT"
keywords = ["fastapi", "multimodal", "search", "ai", "ollama", "local-ai", "vector", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",    
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "python-multipart==0.0.20",
    "asyncpg==0.30.0",
    "pgvector==0.4.1",
    "sqlalchemy==2.0.41",
    "alembic==1.16.4",
    "pillow==11.3.0",
    "opencv-python-headless==4.12.0.88",
    "python-jose[cryptography]==3.5.0",
    "bcrypt==5.0.0",
    "redis==6.2.0",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "aiofiles==24.1.0",
    "httpx==0.28.1",
    "slowapi==0.1.9",
    "gunicorn==23.0.0",
    "ollama>=0.4.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.2",
    "mypy==1.16.1",
    "bandit[sarif]==1.8.0",
    "types-redis==4.6.0.20241004",
    "types-passlib==1.7.7.20250602",
    "types-python-jose==3.5.0.20250531",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py313"
line-length = 88
fix = true
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "__init__.py",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR0911", # too many return statements
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (FastAPI requires certain signatures)
    "PLC0415", # import should be at top-level
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py files

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "cv2.*",
    "PIL.*",
    "ollama.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["migrations", ".venv", "venv"]
skips = ["B601"]  # B601: paramiko_calls
severity = "medium"
