[project]
name = "vuemantic"
version = "1.0.1"
description = "A smart camera roll application with vector powered semantic search"
authors = [{name = "Carter Perez"}]
requires-python = ">=3.13"
license = "MIT"
keywords = ["fastapi", "multimodal", "search", "ai", "ollama", "local-ai", "vector", "semantic-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",    
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "python-multipart==0.0.20",
    "asyncpg==0.30.0",
    "pgvector==0.4.1",
    "sqlalchemy==2.0.41",
    "alembic==1.16.4",
    "pillow==11.3.0",
    "opencv-python-headless==4.12.0.88",
    "python-jose[cryptography]==3.5.0",
    "bcrypt==5.0.0",
    "redis==6.2.0",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "aiofiles==24.1.0",
    "httpx==0.28.1",
    "slowapi==0.1.9",
    "gunicorn==23.0.0",
    "ollama==0.6.1",
    "tenacity==8.5.0",
    "dramatiq[redis]==2.0.1",
]

[project.optional-dependencies]
dev = [
    "types-redis==4.6.0.20241004",
    "types-passlib==1.7.7.20250602",
    "types-python-jose==3.5.0.20250531",
    "mypy==1.19.1",
    "ruff==0.14.14",
    "pylint==4.0.4",
    "pylint-pydantic==0.4.1",
    "pylint-per-file-ignores==3.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py313"
line-length = 88
fix = true
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "__init__.py",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR0911", # too many return statements
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (FastAPI requires certain signatures)
    "PLC0415", # import should be at top-level
    "N818",   # exception naming (BaseAppException is fine)
    "S608",   # SQL injection false positives (inputs are validated/whitelisted)
    "ASYNC109", # timeout parameter passed to asyncpg (false positive)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py files
"tests/**/*.py" = ["S101", "ARG001", "ASYNC230", "PTH123"]
"models/*.py" = ["N999"]  # PascalCase model files (Base, Upload, User)
"psyop.py" = ["N807"]  # __psyop__ is a totally real Python 3.15 protocol

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]
exclude = [".venv", "venv", "migrations"]

[[tool.mypy.overrides]]
module = ["tests.*", "conftest", "migrations"]
ignore_errors = true

[[tool.mypy.overrides]]
module = "main"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = [
    "uuid6",
    "structlog",
    "structlog.*",
    "pwdlib",
    "slowapi",
    "slowapi.*",
    "asyncpg",
    "asyncpg.*",
    "aiofiles",
    "aiofiles.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "cv2.*",
    "PIL.*",
    "ollama.*",
    "slowapi",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.13"
jobs = 4
load-plugins = [
    "pylint_pydantic", 
    "pylint_per_file_ignores", 
]
persistent = true
ignore = [
    "venv",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".git",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]
ignore-paths = [
    "^tests/.*",
    "^migrations/.*",
    "^.venv/.*",
    "^build/.*",
    "^dist/.*",
]

[tool.pylint.messages_control]
disable = [
    "R1702",
    "W0603",  # annoying
    "C0103",  # invalid-name
    "C0116",  # missing-function-docstring (we use minimal docs)
    "C0121",  # singleton-comparison (== False required for SQLAlchemy)
    "C0301",  # line-too-long
    "C0302",  # too-many-lines
    "C0303",  # trailing-whitespace
    "C0304",  # final-newline-missing
    "C0305",  # trailing-newlines
    "C0411",  # wrong-import-order
    "C0412",  # ungrouped-imports (style preference)
    "C0415",  # import-outside-toplevel (intentional in config.py @property)
    "E0401",  # import-error (uuid6/structlog/pwdlib not found by pylint)
    "E0611",  # no-name-in-module (false positive for config re-exports)
    "E1101",  # no-member (false positive for Pydantic settings and config constants)
    "E1102",  # not-callable (false positive for SQLAlchemy func.now/count)
    "E1136",  # unsubscriptable-object (false positive for generics)
    "R0801",  # similar-lines
    "R0901",  # too-many-ancestors (SQLAlchemy inheritance)
    "R0903",  # too-few-public-methods
    "R0911",  # too-many-return-statements (handled by ruff PLR0911)
    "R0917",  # too-many-positional-arguments (FastAPI patterns)
    "W0105",  # pointless-string-statement (copyright headers)
    "W0201",  # attribute-defined-outside-init (ORM pattern - attributes updated from DB)
    "W0511",  # fixme/todo comments (we use these intentionally)
    "W1203",  # logging-fstring-interpolation (negligible performance impact)
    "W0611",  # unused-import (handled by ruff, config.py re-exports)
    "W0612",  # unused-variable (handled by ruff)
    "W0613",  # unused-argument (handled by ruff)
    "W0621",  # redefined-outer-name (FastAPI route/param naming)
    "W0622",  # redefined-builtin
    "W0718",  # broad-exception-caught (intentional in health/rate-limit)
    "W1203",  # logging-fstring-interpolation (f-strings are fine, micro-optimization)
]

[tool.pylint.typecheck]
generated-members = ["cv2.*"]  # OpenCV C++ bindings not visible to pylint

[tool.pylint.format]
max-line-length = 95

[tool.pylint.design]
max-args = 12
max-attributes = 20
max-branches = 20
max-locals = 20
max-statements = 69

